--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ wheels/
 .idea/
 .vs/
 calendar-sem8-tp/.vs/
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
